Bug 1664405 - Properly copy mHasCacheControl in nsHttpResponseHead::operator=. r=dragana,necko-reviewers

Oof, I sometimes really hate C++ :/

The new assert makes our tests go boom without the fix.

Differential Revision: https://phabricator.services.mozilla.com/D89940