netwerk/protocol/http/nsHttpResponseHead.h
@@ -195,6 +195,7 @@ class nsHttpResponseHead {
 
   bool NoCache_locked() const {
     // We ignore Pragma: no-cache if Cache-Control is set.
+    MOZ_ASSERT_IF(mCacheControlNoCache, mHasCacheControl);
     return mHasCacheControl ? mCacheControlNoCache : mPragmaNoCache;
   }
 
